# proyectoCenace

./: .env  .gitignore  LICENSE  pyproject.toml
UI/: app.js  documentos.js  index.html  soluciones.js  tickets.js
datos/BK_data/: datos_antropic.csv  datos_con_tokens.csv  datos_openai.csv
datos/clean_data/: datos_censurados_agrupados.csv
datos/raw_data/: Agregado.csv  Copy of datos_censurados.csv  ListadoTicketsSoporteBot.csv  TicketsBot.xlsx  TicketsBotDepurados.xlsx  dataset_ticketBotRevisado.xlsx
docs/: 0_home.html  1_comprension.html  2_comprension_datos.html  3_preparacion.html  4_modelado.html  5_despliegue.html  6_documentacion.html  comprension.html  search.json
notebooks/: Seminario3.ipynb  test.ipynb
quarto/: 0_home.qmd  1_comprension.qmd  2_comprension_datos.qmd  3_preparacion.qmd  4_modelado.qmd  5_despliegue.qmd  6_documentacion.qmd  _quarto.yml  despliegue.qmd  fase_1.qmd  home.qmd  home.quarto_ipynb  styles.css
quarto/.quarto/idx/: fase_1.qmd.json  home.qmd.json
quarto/.quarto/xref/: INDEX
quarto/_site/: 0_home.html  1_comprension.html  2_comprension_datos.html  3_preparacion.html  6_documentacion.html  fase_1.html  home.html  index.html  search.json
quarto2/: _quarto.yml  comprension.qmd  comprension_datos.qmd  despliegue.qmd  documentacion.qmd  home.qmd  modelado.qmd
src/cenacellm/: __init__.py  clients.py  config.py  doccollection.py  rag.py  rag_prueba.py  types.py  vectorstore.py
src/cenacellm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cenacellm/API/: chat.py  main.py
src/cenacellm/UI/: app.js  documentos.js  index.html  prueba.html  soluciones.js  styles.css  tabs.js  tickets.js
src/cenacellm/tools/: rag.py  (+6 more)
(+21 files in other folders)
